footer+header-imgsocial-href

--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -32,16 +32,20 @@
     <header class="header">
       <div class="container-fluid d-flex justify-content-between py-1">
         <span>
-          <img
-            src="../img/social/instagram.png"
-            alt="logo instagram"
-            class="logo__social"
-          />
-          <img
-            src="../img/social/facebook.png"
-            alt="logo facebook"
-            class="logo__social"
-          />
+          <a href="#">
+            <img
+              src="../img/social/instagram.png"
+              alt="logo instagram"
+              class="logo__social"
+            />
+          </a>
+          <a href="#">
+            <img
+              src="../img/social/facebook.png"
+              alt="logo facebook"
+              class="logo__social"
+            />
+          </a>
         </span>
         <span>
           <b>NEXT\IDEA</b>
@@ -209,16 +213,20 @@
           Todos los derechos reservados 2022©
         </div>
         <div>
-          <img
-            src="../img/social/instagram.png"
-            alt="logo instagram"
-            class="logo__social d-block"
-          />
-          <img
-            src="../img/social/facebook.png"
-            alt="logo facebook"
-            class="logo__social d-block"
-          />
+          <a href="#">
+            <img
+              src="../img/social/instagram.png"
+              alt="logo instagram"
+              class="logo__social d-block"
+            />
+          </a>
+          <a href="#">
+            <img
+              src="../img/social/facebook.png"
+              alt="logo facebook"
+              class="logo__social d-block"
+            />
+          </a>
         </div>
       </div>
     </footer>
