allpages-imglogo-href-to-index

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -94,7 +94,7 @@
               </li>
             </ul>
             <span class="d-flex">
-              <a href="#"
+              <a href="../index.html"
                 ><img
                   src="../img/logo/logo.svg"
                   alt="logo next idea"
@@ -182,7 +182,7 @@
       <div class="container__alone container-fluid"></div>
       <div class="container-fluid d-flex justify-content-between">
         <div>
-          <a href="#"
+          <a href="../index.html"
             ><img src="../img/logo/logo.svg" alt="logo next idea" class="logo"
           /></a>
         </div>
