--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -109,7 +109,7 @@
       <!--SECTION-->
       <section class="section">
         <div class="container py-5">
-          <p class="text-center fs-2 bounce_1">Nuestros <b>SERVICIOS</b></p>
+          <h1 class="text-center fs-2 bounce_1">Nuestros <b>SERVICIOS</b></h1>
           <div class="row my-5 justify-content-center">
             <div class="col-lg-4 col-sm-12 text-center fs-4">
               <div class="d-flex flex-column align-items-center">
