--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -107,8 +107,13 @@
     </header>
     <main>
       <!--SECTION-->
-      <section class="section">
+      <section class="section py-5">
         <div class="container">
+          <div class="">
+            <h1 class="text-center fs-2 bounce_1">
+              <b>NUESTRO CONTACTO</b>
+            </h1>
+          </div>
           <div class="row justify-content-center bounce_2">
             <div class="col-lg-4 col-sm-12 mt-5 mb-5 row align-items-center border bg-light">
               <div class="row-cols-1 text-center ">
