--- a/pages/preguntas.html
+++ b/pages/preguntas.html
@@ -109,8 +109,10 @@
       <!--SECTION-->
       <section class="section">
         <div class="container py-5">
-          <div class="text-center fs-2 bounce_1 mb-5">
-            <b>PREGUNTAS FRECUENTES</b>
+          <div class="mb-5">
+            <h1 class="text-center fs-2 bounce_1">
+              <b>PREGUNTAS FRECUENTES</b>
+            </h1>
           </div>
           <div class="section__preg row px-5">
             <ol>
