--- a/pages/cursos.html
+++ b/pages/cursos.html
@@ -108,9 +108,9 @@
     <main>
       <!--SECTION-->
       <section class="section py-5">
-        <p class="text-center fs-2 bounce_1">
+        <h1 class="text-center fs-2 bounce_1">
           Nuestros <strong>CURSOS</strong>
-        </p>
+        </h1>
         <div class="container text-center py-5">
           <div class="row justify-content-center row-cols-2">
             <div class="card col mb-4 mx-3" style="width: 22rem">
