--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </head>
   <body>
     <!--HEADER-->
-    <header class="header">
+    <header class="header shadow rounded">
       <div class="container-fluid d-flex justify-content-between py-1">
         <span>
           <a href="#">
@@ -188,7 +188,7 @@
     </main>
     <!--FOOTER-->
     <footer class="footer">
-      <div class="container__alone container-fluid"></div>
+      <div class="container__alone container-fluid shadow"></div>
       <div class="container-fluid d-flex justify-content-between">
         <div>
           <a href="#"
