shadow-all-footers

--- a/pages/preguntas.html
+++ b/pages/preguntas.html
@@ -191,7 +191,7 @@
     </main>
     <!--FOOTER-->
     <footer class="footer">
-      <div class="container__alone container-fluid"></div>
+      <div class="container__alone container-fluid shadow"></div>
       <div class="container-fluid d-flex justify-content-between">
         <div>
           <a href="../index.html"
