--- a/pages/cursos.html
+++ b/pages/cursos.html
@@ -190,7 +190,7 @@
     </main>
     <!--FOOTER-->
     <footer class="footer">
-      <div class="container__alone container-fluid"></div>
+      <div class="container__alone container-fluid shadow"></div>
       <div class="container-fluid d-flex justify-content-between">
         <div>
           <a href="../index.html"
