--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </head>
   <body>
     <!--HEADER-->
-    <header class="header shadow rounded">
+    <header class="header shadow-lg">
       <div class="container-fluid d-flex justify-content-between py-1">
         <span>
           <a href="#">
