--- a/pages/cursos.html
+++ b/pages/cursos.html
@@ -167,6 +167,23 @@
             </div>
             <div class="card col mb-4 mx-3" style="width: 22rem">
               <img
+                src="../img/art/cursos/fotografia.png"
+                alt="Camara de foto profesional con una notebook de fondo"
+                class="card-img-top"
+              />
+              <div class="card-body">
+                <h5 class="card-title"><i>Iluminación</i></h5>
+                <p class="card-text">
+                  Este curso se enfoca en todas las caracteristicas a tener en
+                  cuenta para una producción, en cuanto a la luz.
+                </p>
+                <div class="d-flex justify-content-center">
+                  <a href="" class="btn btn-primary">INSCRIBIRSE</a>
+                </div>
+              </div>
+            </div>
+            <div class="card col mb-4 mx-3" style="width: 22rem">
+              <img
                 src="../img/art/cursos/comingsoon.png"
                 alt="cartel de que construcción en progreso"
                 class="card-img-top"
