new-card-iluminacion

--- a/pages/cursos.html
+++ b/pages/cursos.html
@@ -167,7 +167,7 @@
             </div>
             <div class="card col mb-4 mx-3" style="width: 22rem">
               <img
-                src="../img/art/cursos/fotografia.png"
+                src="../img/art/cursos/iluminacion.jpg"
                 alt="Camara de foto profesional con una notebook de fondo"
                 class="card-img-top"
               />
@@ -175,7 +175,8 @@
                 <h5 class="card-title"><i>Iluminación</i></h5>
                 <p class="card-text">
                   Este curso se enfoca en todas las caracteristicas a tener en
-                  cuenta para una producción, en cuanto a la luz.
+                  cuenta para generar una buena producción con respecto a la
+                  luz.
                 </p>
                 <div class="d-flex justify-content-center">
                   <a href="" class="btn btn-primary">INSCRIBIRSE</a>
