--- a/pages/cursos.html
+++ b/pages/cursos.html
@@ -185,6 +185,24 @@
             </div>
             <div class="card col mb-4 mx-3" style="width: 22rem">
               <img
+                src="../img/art/cursos/iluminacion.jpg"
+                alt="Camara de foto profesional con una notebook de fondo"
+                class="card-img-top"
+              />
+              <div class="card-body">
+                <h5 class="card-title"><i>Adobe Premiere</i></h5>
+                <p class="card-text">
+                  En este curso aprenderás a utilizar como un profesional la
+                  apliacion para posproduiccion de videos mas utilizada en el
+                  rubro.
+                </p>
+                <div class="d-flex justify-content-center">
+                  <a href="" class="btn btn-primary">INSCRIBIRSE</a>
+                </div>
+              </div>
+            </div>
+            <div class="card col mb-4 mx-3" style="width: 22rem">
+              <img
                 src="../img/art/cursos/comingsoon.png"
                 alt="cartel de que construcción en progreso"
                 class="card-img-top"
