--- a/pages/cursos.html
+++ b/pages/cursos.html
@@ -113,7 +113,7 @@
         </h1>
         <div class="container text-center pt-5">
           <div class="row justify-content-center row-cols-2">
-            <div class="card col mb-4 mx-3" style="width: 22rem">
+            <div class="card col mb-4 mx-3 shadow-sm" style="width: 22rem">
               <img
                 src="../img/art/cursos/photoshop.png"
                 alt="chica usando editando una imagen en su computadora con photoshop"
@@ -124,6 +124,24 @@
                 <p class="card-text">
                   En este curso aprenderás a utilizar al completo, como un
                   profesional la herramienta de edición de imágenes.
+                </p>
+                <div class="d-flex justify-content-center">
+                  <a href="" class="btn btn-primary">INSCRIBIRSE</a>
+                </div>
+              </div>
+            </div>
+            <div class="card col mb-4 mx-3" style="width: 22rem">
+              <img
+                src="../img/art/cursos/adobe.jpg"
+                alt="Camara de foto profesional con una notebook de fondo"
+                class="card-img-top"
+              />
+              <div class="card-body">
+                <h5 class="card-title"><i>Adobe Premiere</i></h5>
+                <p class="card-text">
+                  En este curso aprenderás a utilizar como un profesional la
+                  apliacion para posproduiccion de videos mas utilizada en el
+                  rubro.
                 </p>
                 <div class="d-flex justify-content-center">
                   <a href="" class="btn btn-primary">INSCRIBIRSE</a>
@@ -183,24 +201,7 @@
                 </div>
               </div>
             </div>
-            <div class="card col mb-4 mx-3" style="width: 22rem">
-              <img
-                src="../img/art/cursos/iluminacion.jpg"
-                alt="Camara de foto profesional con una notebook de fondo"
-                class="card-img-top"
-              />
-              <div class="card-body">
-                <h5 class="card-title"><i>Adobe Premiere</i></h5>
-                <p class="card-text">
-                  En este curso aprenderás a utilizar como un profesional la
-                  apliacion para posproduiccion de videos mas utilizada en el
-                  rubro.
-                </p>
-                <div class="d-flex justify-content-center">
-                  <a href="" class="btn btn-primary">INSCRIBIRSE</a>
-                </div>
-              </div>
-            </div>
+
             <div class="card col mb-4 mx-3" style="width: 22rem">
               <img
                 src="../img/art/cursos/comingsoon.png"
