all-cursos-completed

--- a/pages/cursos.html
+++ b/pages/cursos.html
@@ -130,7 +130,7 @@
                 </div>
               </div>
             </div>
-            <div class="card col mb-4 mx-3" style="width: 22rem">
+            <div class="card col mb-4 mx-3 shadow-sm" style="width: 22rem">
               <img
                 src="../img/art/cursos/adobe.jpg"
                 alt="Camara de foto profesional con una notebook de fondo"
@@ -148,7 +148,7 @@
                 </div>
               </div>
             </div>
-            <div class="card col mb-4 mx-3" style="width: 22rem">
+            <div class="card col mb-4 mx-3 shadow-sm" style="width: 22rem">
               <img
                 src="../img/art/cursos/editing.png"
                 alt="persona editando video con pantalla en verde"
@@ -165,7 +165,7 @@
                 </div>
               </div>
             </div>
-            <div class="card col mb-4 mx-3" style="width: 22rem">
+            <div class="card col mb-4 mx-3 shadow-sm" style="width: 22rem">
               <img
                 src="../img/art/cursos/fotografia.png"
                 alt="Camara de foto profesional con una notebook de fondo"
@@ -183,7 +183,7 @@
                 </div>
               </div>
             </div>
-            <div class="card col mb-4 mx-3" style="width: 22rem">
+            <div class="card col mb-4 mx-3 shadow-sm" style="width: 22rem">
               <img
                 src="../img/art/cursos/iluminacion.jpg"
                 alt="Camara de foto profesional con una notebook de fondo"
@@ -202,19 +202,18 @@
               </div>
             </div>
 
-            <div class="card col mb-4 mx-3" style="width: 22rem">
+            <div class="card col mb-4 mx-3 shadow-sm" style="width: 22rem">
               <img
                 src="../img/art/cursos/comingsoon.png"
                 alt="cartel de que construcción en progreso"
                 class="card-img-top"
               />
               <div class="card-body">
-                <h5 class="card-title">Pronto...</h5>
+                <h5 class="card-title">Nuevos cursos pronto...</h5>
                 <p class="card-text">
-                  Nuevos cursos en proceso:<br />
-                  24/12<br />
-                  01/12<br />
-                  ??/??
+                  <br />
+                  ??/??<br />
+                  ??/??<br />
                 </p>
                 <div class="d-flex justify-content-center">
                   <a href="" class="btn btn-primary">INSCRIBIRSE</a>
