webp-servicios-update

--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -115,7 +115,7 @@
               <div class="d-flex flex-column align-items-center">
                 <b>VINTAGE CONCEPT</b>
                 <img
-                  src="../img/art/servicios/auto.png"
+                  src="../img/art/servicios/auto.webp"
                   alt="auto vintage, paragolpe trasero"
                   class="section__image img-fluid"
                 />
@@ -147,7 +147,7 @@
               <div class="d-flex flex-column align-items-center">
                 <b>STUDIO MANAGMENT</b>
                 <img
-                  src="../img/art/servicios/estudio.png"
+                  src="../img/art/servicios/estudio.webp"
                   alt="Estudio de fotografia y video, escenario con luces, camaras, paneles, fondos"
                   class="section__image w-100 img-fluid"
                 />
@@ -174,7 +174,7 @@
               <div class="d-flex flex-column align-items-center">
                 <b>GEOMETRIC CONCEPT</b>
                 <img
-                  src="../img/art/servicios/geometric.png"
+                  src="../img/art/servicios/geometric.webp"
                   alt="Geometria, angulos y lineas con tonalidades naranja, verde y bordo"
                   class="section__image img-fluid"
                 />
