new-webp-cursos

--- a/pages/cursos.html
+++ b/pages/cursos.html
@@ -115,7 +115,7 @@
           <div class="row justify-content-center row-cols-2">
             <div class="card col mb-4 mx-3 shadow-sm" style="width: 22rem">
               <img
-                src="../img/art/cursos/photoshop.png"
+                src="../img/art/cursos/photoshop.webp"
                 alt="chica usando editando una imagen en su computadora con photoshop"
                 class="card-img-top"
               />
@@ -132,7 +132,7 @@
             </div>
             <div class="card col mb-4 mx-3 shadow-sm" style="width: 22rem">
               <img
-                src="../img/art/cursos/adobe.jpg"
+                src="../img/art/cursos/adobe.webp"
                 alt="Camara de foto profesional con una notebook de fondo"
                 class="card-img-top"
               />
@@ -150,7 +150,7 @@
             </div>
             <div class="card col mb-4 mx-3 shadow-sm" style="width: 22rem">
               <img
-                src="../img/art/cursos/editing.png"
+                src="../img/art/cursos/editing.webp"
                 alt="persona editando video con pantalla en verde"
                 class="card-img-top"
               />
@@ -167,7 +167,7 @@
             </div>
             <div class="card col mb-4 mx-3 shadow-sm" style="width: 22rem">
               <img
-                src="../img/art/cursos/fotografia.png"
+                src="../img/art/cursos/fotografia.webp"
                 alt="Camara de foto profesional con una notebook de fondo"
                 class="card-img-top"
               />
@@ -185,7 +185,7 @@
             </div>
             <div class="card col mb-4 mx-3 shadow-sm" style="width: 22rem">
               <img
-                src="../img/art/cursos/iluminacion.jpg"
+                src="../img/art/cursos/iluminacion.webp"
                 alt="Camara de foto profesional con una notebook de fondo"
                 class="card-img-top"
               />
@@ -204,7 +204,7 @@
 
             <div class="card col mb-4 mx-3 shadow-sm" style="width: 22rem">
               <img
-                src="../img/art/cursos/comingsoon.png"
+                src="../img/art/cursos/comingsoon.webp"
                 alt="cartel de que construcción en progreso"
                 class="card-img-top"
               />
