index-new-social-img

--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
         <span>
           <a href="#">
             <img
-              src="img/social/instagram.png"
+              src="img/social/instagram.svg"
               alt="logo instagram"
               class="logo__social"
             />
           </a>
           <a href="#">
             <img
-              src="img/social/facebook.png"
+              src="img/social/facebook.svg"
               alt="logo facebook"
               class="logo__social"
             />
@@ -202,14 +202,14 @@
         <div>
           <a href="#">
             <img
-              src="img/social/instagram.png"
+              src="img/social/instagram.svg"
               alt="logo instagram"
               class="logo__social d-block"
             />
           </a>
           <a href="#">
             <img
-              src="img/social/facebook.png"
+              src="img/social/facebook.svg"
               alt="logo facebook"
               class="logo__social d-block"
             />
