shadow-all-imgs

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <img
               src="img/art/index1.webp"
               alt="Grupo de personas trabajando en conjunto"
-              class="rounded section__image2 img-fluid d-block mx-auto my-3"
+              class="rounded shadow-lg section__image2 img-fluid d-block mx-auto my-3"
             />
           </div>
           <div class="text-lg-end text-md-start text-sm-center">
@@ -151,7 +151,7 @@
             <img
               src="img/art/index2.webp"
               alt="Servicios de asesoramiento, logos de redes sociales"
-              class="rounded section__image2 img-fluid d-block mx-auto my-3"
+              class="rounded shadow-lg section__image2 img-fluid d-block mx-auto my-3"
             />
           </div>
           <div class="text-lg-start text-md-end text-sm-center">
@@ -171,7 +171,7 @@
             <img
               src="img/art/index3.webp"
               alt="Cursos, profesor dando clase a estudiantes"
-              class="rounded section__image2 img-fluid d-block mx-auto my-3"
+              class="rounded shadow-lg section__image2 img-fluid d-block mx-auto my-3"
             />
           </div>
           <div class="text-center">
