--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -115,8 +115,8 @@
             </h1>
           </div>
           <div class="row justify-content-center bounce_2">
-            <div class="col-lg-4 col-sm-12 mt-5 mb-5 row align-items-center border bg-light">
-              <div class="row-cols-1 text-center ">
+            <div class="col-lg-4 col-sm-12 mt-5 mb-5 row align-items-center border bg-light rounded">
+              <div class="row-cols-1 text-center">
                 <div class="col">
                   <img src="../img/contacto/contacto.svg" alt="icono de contacto" class="img-fluid logo__social">
                   <p>
@@ -147,7 +147,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-6 col-sm-12 mt-5 mb-5 border bg-light">
+            <div class="col-lg-6 col-sm-12 mt-5 mb-5 border bg-light rounded">
                 <form class="row justify-content-center ">
                   
                   <div class=" col-10 mb-2 pt-5">
