--- a/pages/preguntas.html
+++ b/pages/preguntas.html
@@ -114,7 +114,7 @@
               <b>PREGUNTAS FRECUENTES</b>
             </h1>
           </div>
-          <div class="section__preg row px-5">
+          <div class="section__preg row px-5 rounded shadow-lg">
             <ol>
               <li class="py-2 col pt-4">
                 <div><b>¿ Quiénes somos ?</b></div>
