--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -117,7 +117,7 @@
                 <img
                   src="../img/art/servicios/auto.webp"
                   alt="auto vintage, paragolpe trasero"
-                  class="section__image img-fluid"
+                  class="section__image img-fluid shadow"
                 />
               </div>
             </div>
@@ -149,7 +149,7 @@
                 <img
                   src="../img/art/servicios/estudio.webp"
                   alt="Estudio de fotografia y video, escenario con luces, camaras, paneles, fondos"
-                  class="section__image w-100 img-fluid"
+                  class="section__image w-100 img-fluid shadow"
                 />
               </div>
             </div>
@@ -176,7 +176,7 @@
                 <img
                   src="../img/art/servicios/geometric.webp"
                   alt="Geometria, angulos y lineas con tonalidades naranja, verde y bordo"
-                  class="section__image img-fluid"
+                  class="section__image img-fluid shadow"
                 />
               </div>
             </div>
