--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             <p>
               Por otro lado queremos comentarte que si todavía no sos parte
               de<br />
-              la familia NEXT\IDEA, podés seguirnos en nuestras redes
+              la familia <b>NEXT\IDEA</b>, podés seguirnos en nuestras redes
               sociales,<br />
               que junto con tu ayuda, crecemos aún más.
             </p>
