--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             ><img src="img/logo/logo.svg" alt="logo next idea" class="logo"
           /></a>
         </div>
-        <div class="text-center fs-6">
+        <div class="text-center fsize d-flex align-items-center">
           Web desarrollada completamente por y para entusiastas del arte.<br />
           Todos los derechos reservados 2022©
         </div>
