footer-text-changed-allpages

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -191,7 +191,7 @@
             ><img src="../img/logo/logo.svg" alt="logo next idea" class="logo"
           /></a>
         </div>
-        <div class="text-center">
+        <div class="text-center fsize d-flex align-items-center">
           Web desarrollada completamente por y para fanáticos del arte.<br />
           Todos los derechos reservados 2022©
         </div>
